Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-02-21 (SVN):
    * hexenworld, server/sv_phys.c (SV_Physics_Step): changed hit sound
      from demon/dland2.wav to fx/thngland.wav. demon/dland2.wav doesn't
      exist in hexen2, the reference there seems to have been missed by
      Raven guys while porting qw source to hw. fixes the "SV_StartSound:
      demon/dland2.wav not precached" messages from hwsv.

2012-02-20 (SVN):
    * menu.c, net_comx.c, net_ser.c: Made some lookup tables const data.

2012-02-20 (SVN):
    * gl_screen.c, screen.c, sbar.c: Minor tidyings.

2012-02-20 (SVN):
    * view.c: Moved the Draw_Crosshair() call from V_RenderView() to
      SCR_UpdateScreen() of screen.c.

2012-02-20 (SVN):
    * gl_screen.c, screen.c: Merged hexen2 and hexenworld versions, and
      moved under h2shared.

2012-02-19 (SVN):
    * gl_screen.c: Commented out gl_triplebuffer cvar in the hexenworld
      version which was virtually non-functional. Added it to the hexen2
      version in commented out form for symmetry.
    * gl_screen.c: Unlike its screen.c counterpart, SCR_CalcRefdef() of
      the opengl version sets sb_lines to 36, not 46. Added a fixme note
      about it.
    * gl_screen.c: Merged hexenworld version of SCR_TileClear to hexen2.

2012-02-19 (SVN):
    * pr_cmds.c, pr_exec.c, pr_edict.c, progdefs.h, sv_main.c: Changed
      several Sys_Error() calls to Host_Error(). Made type_size array
      static to pr_edict.c. To be consistent, renamed globalvars_t to
      globalvars_v112_t for hexen2 and globalvars_v015_t for hexenworld.
      Minor cleanup in Ed_Alloc_Temp() by removing the rather useless
      LeastSet variable.

2012-02-18 (SVN):
    * gl_draw.c (Draw_Anisotropy_f): apply anisotropic level setting only
      to mipmap textures.

2012-02-15 (SVN):
    * rpm spec file: Added "--with gtk3" build option for the launcher.

2012-02-15 (SVN):